Traducido archivo c-api/set (#2178)
closes #2054

Co-authored-by: José Luis Salgado Banda <49181840+josephLSalgado@users.noreply.github.com>
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/c-api/set.po
+++ b/c-api/set.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-12-09 10:57+0800\n"
+"PO-Revision-Date: 2022-11-10 21:17+0100\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2\n"
 
 #: ../Doc/c-api/set.rst:6
 msgid "Set Objects"
@@ -38,9 +39,18 @@ msgid ""
 "`PyNumber_InPlaceSubtract`, :c:func:`PyNumber_InPlaceOr`, and :c:func:"
 "`PyNumber_InPlaceXor`)."
 msgstr ""
+"Esta sección detalla la API pública de los objetos :class:`set` y :class:"
+"`frozenset`.  Cualquier funcionalidad que no esté listada a continuación se "
+"accede mejor utilizando el protocolo abstracto de objetos (incluyendo :c:"
+"func:`PyObject_CallMethod`, :c:func:`PyObject_RichCompareBool`, :c:func:"
+"`PyObject_Hash`, :c:func:`PyObject_Repr`, :c:func:`PyObject_IsTrue`, :c:func:"
+"`PyObject_Print`, y :c:func:`PyObject_GetIter`) o el protocolo numérico "
+"abstracto (incluyendo :c:func:`PyNumber_And`, :c:func:`PyNumber_Subtract`, :"
+"c:func:`PyNumber_Or`, :c:func:`PyNumber_Xor`, :c:func:"
+"`PyNumber_InPlaceAnd`, :c:func:`PyNumber_InPlaceSubtract`, :c:func:"
+"`PyNumber_InPlaceOr`, y :c:func:`PyNumber_InPlaceXor`)."
 
 #: ../Doc/c-api/set.rst:29
-#, fuzzy
 msgid ""
 "This subtype of :c:type:`PyObject` is used to hold the internal data for "
 "both :class:`set` and :class:`frozenset` objects.  It is like a :c:type:"
@@ -51,15 +61,15 @@ msgid ""
 "All access should be done through the documented API rather than by "
 "manipulating the values in the structure."
 msgstr ""
-"Este subtipo de :c:type:`PyObject` se utiliza para contener los datos "
-"internos de los objetos :class:`set` y :class:`frozenset`. Es como un :c:"
-"type:`PyDictObject` en el sentido de que es un tamaño fijo para conjuntos "
-"pequeños (muy parecido al almacenamiento de tuplas) y apuntará a un bloque "
-"de memoria separado de tamaño variable para conjuntos de tamaño medio y "
-"grande (muy similar a la lista almacenamiento). Ninguno de los campos de "
-"esta estructura debe considerarse público y está sujeto a cambios. Todo el "
-"acceso debe hacerse a través de la API documentada en lugar de manipular los "
-"valores en la estructura."
+"Este subtipo de :c:type:`PyObject` se utiliza para mantener los datos "
+"internos de los objetos :class:`set` y :class:`frozenset`.  Es como un :c:"
+"type:`PyDictObject` en el sentido de que tiene un tamaño fijo para los "
+"conjuntos pequeños (muy parecido al almacenamiento de tuplas) y apuntará a "
+"un bloque de memoria separado y de tamaño variable para los conjuntos de "
+"tamaño medio y grande (muy parecido al almacenamiento de listas). Ninguno de "
+"los campos de esta estructura debe considerarse público y todos están "
+"sujetos a cambios.  Todo el acceso debe hacerse a través de la API "
+"documentada en lugar de manipular los valores de la estructura."
 
 #: ../Doc/c-api/set.rst:40
 msgid ""
@@ -201,7 +211,6 @@ msgstr ""
 "`set`, :class:`frozenset`, o una instancia de un subtipo."
 
 #: ../Doc/c-api/set.rst:133
-#, fuzzy
 msgid ""
 "Add *key* to a :class:`set` instance.  Also works with :class:`frozenset` "
 "instances (like :c:func:`PyTuple_SetItem` it can be used to fill in the "
@@ -211,12 +220,12 @@ msgid ""
 "grow.  Raise a :exc:`SystemError` if *set* is not an instance of :class:"
 "`set` or its subtype."
 msgstr ""
-"Agrega *key* a una instancia de :class:`set`. También funciona con "
-"instancias :class:`frozenset` (como :c:func:`PyTuple_SetItem` se puede usar "
-"para completar los valores de los *frozensets* nuevos antes de que estén "
-"expuestos a otro código). Retorna ``0`` en caso de éxito o ``-1`` en caso de "
-"error. Lanza un :exc:`TypeError` si la *key* no se puede compartir. Lanza "
-"un :exc:`MemoryError` si no hay espacio para crecer. Lanza un :exc:"
+"Añade *key* a una instancia :class:`set`.  También funciona con instancias "
+"de :class:`frozenset` (al igual que :c:func:`PyTuple_SetItem` puede usarse "
+"para rellenar los valores de nuevos frozensets antes de que sean expuestos a "
+"otro código).  Retorna ``0`` en caso de éxito o ``-1`` en caso de fallo. "
+"Lanza un error :exc:`TypeError` si la *key* no se puede intercambiar. Lanza "
+"un :exc:`MemoryError` si no hay espacio para crecer.  Lanza un :exc:"
 "`SystemError` si *set* no es una instancia de :class:`set` o su subtipo."
 
 #: ../Doc/c-api/set.rst:142
