Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -1716,7 +1716,7 @@ msgstr ""
 "Se agregaron dos nuevos caracteres de formato al módulo :mod:`struct` para "
 "enteros de 64 bits en plataformas que admiten el tipo C :c:expr:`long long`. "
 "``q`` es para un entero de 64 bits con signo y ``Q`` es para uno sin firmar. "
-"El valor se devuelve en el tipo de entero largo de Python. (Aportado por Tim "
+"El valor se retorna en el tipo de entero largo de Python. (Aportado por Tim "
 "Peters.)"
 
 #: ../Doc/whatsnew/2.2.rst:990
