--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -737,7 +737,7 @@ msgid ""
 "decimal fractions accurately.  The new :class:`Decimal` type can represent "
 "these fractions accurately, up to a user-specified precision limit."
 msgstr ""
-"Python siempre ha admitido números de punto flotante (FP), basados ​​en el "
+"Python siempre ha soportado números de punto flotante (FP), basados ​​en el "
 "tipo subyacente C :c:expr:`double`, como un tipo de datos. Sin embargo, "
 "aunque la mayoría de los lenguajes de programación proporcionan un tipo de "
 "punto flotante, muchas personas (incluso los programadores) no saben que los "
@@ -2412,7 +2412,7 @@ msgid ""
 "The :c:expr:`Py_IS_NAN(X)` macro returns 1 if  its float or double argument "
 "*X* is a NaN.   (Contributed by Tim Peters.)"
 msgstr ""
-"La macro :c:expr:`Py_IS_NAN(X)` devuelve 1 si su argumento flotante o doble "
+"La macro :c:expr:`Py_IS_NAN(X)` retorna 1 si su argumento flotante o doble "
 "*X* es un NaN. (Aportado por Tim Peters.)"
 
 #: ../Doc/whatsnew/2.4.rst:1470
