--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -1625,7 +1625,7 @@ msgid ""
 "read at https://hg.jcea.es/pybsddb/file/tip/ChangeLog.)"
 msgstr ""
 "Módulo actualizado: el módulo :mod:`bsddb` se ha actualizado de 4.7.2devel9 "
-"a la versión 4.8.4 de `the pybsddb package <https://www.jcea.es/programacion/"
+"a la versión 4.8.4 de `el paquete pybsddb <https://www.jcea.es/programacion/"
 "pybsddb.htm>`__. La nueva versión presenta una mejor compatibilidad con "
 "Python 3.x, varias correcciones de errores y agrega varios indicadores y "
 "métodos nuevos de BerkeleyDB. (Actualizado por Jesús Cea Avión; :issue:"
@@ -3419,7 +3419,7 @@ msgstr ""
 ":meth:`~unittest.TestCase.assertAlmostEqual` y :meth:`~unittest.TestCase."
 "assertNotAlmostEqual` prueban si *first* y *second* son aproximadamente "
 "iguales. Este método puede redondear su diferencia a un número especificado "
-"opcionalmente de *places* (el valor predeterminado es 7) y compararlo con "
+"opcionalmente de *lugares* (el valor predeterminado es 7) y compararlo con "
 "cero, o requerir que la diferencia sea menor que un valor *delta* "
 "proporcionado."
 
