--- a/whatsnew/3.0.po
+++ b/whatsnew/3.0.po
@@ -51,7 +51,7 @@ msgstr ""
 "en una versión típica y más que son importantes para todos los usuarios de "
 "Python. Sin embargo, después de digerir los cambios, descubrirá que Python "
 "realmente no ha cambiado tanto; en general, estamos solucionando "
-"principalmente molestias y verrugas conocidas, y eliminando una gran "
+"principalmente molestias y defectos conocidos, y eliminando una gran "
 "cantidad de viejas cosas."
 
 #: ../Doc/whatsnew/3.0.rst:63
