--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -2492,7 +2492,7 @@ msgid ""
 msgstr ""
 "La función constructora :func:`ssl.wrap_socket` ahora toma un argumento "
 "*ciphers*. La cadena *ciphers* enumera los algoritmos de cifrado permitidos "
-"utilizando el formato descrito en `OpenSSL documentation <https://www."
+"utilizando el formato descrito en la `documentación de OpenSSL <https://www."
 "openssl.org/docs/man1.0.2/man1/ciphers.html#CIPHER-LIST-FORMAT>`__."
 
 #: ../Doc/whatsnew/3.2.rst:1652
@@ -2717,7 +2717,7 @@ msgid ""
 "and a directory to start discovery with ``-s``:"
 msgstr ""
 "La llamada de línea de comandos ``python -m unittest`` ahora puede aceptar "
-"rutas de archivos en lugar de nombres de módulos para ejecutar pruebas "
+"rutas de archivo en lugar de nombres de módulos para ejecutar pruebas "
 "específicas (:issue:`10620`). El nuevo descubrimiento de pruebas puede "
 "encontrar pruebas dentro de los paquetes, localizando cualquier prueba que "
 "se pueda importar desde el directorio de nivel superior. El directorio de "
