--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -282,7 +282,7 @@ msgstr ""
 "`Upfront Systems <http://www.upfrontsoftware.co.za>`__ de Stellenbosch, "
 "Sudáfrica, proporciona amablemente el alojamiento del rastreador de errores "
 "de Python. Martin von Löwis se esforzó mucho en importar errores y parches "
-"existentes de SourceForge; Sus scripts para esta operación de importación "
+"existentes de SourceForge; sus scripts para esta operación de importación "
 "están en ``https://svn.python.org/view/tracker/importer/`` y pueden ser "
 "útiles para otros proyectos que deseen pasar de SourceForge a Roundup."
 
@@ -851,7 +851,7 @@ msgstr ""
 "generalmente incluye un directorio cuya ruta termina en ``\"site-"
 "packages\"``. Este directorio está destinado a contener paquetes instalados "
 "localmente disponibles para todos los usuarios que utilizan una máquina o "
-"una instalación de sitio en particular."
+"un sitio de instalación en particular."
 
 #: ../Doc/whatsnew/2.6.rst:529
 msgid ""
@@ -1064,7 +1064,7 @@ msgid ""
 msgstr ""
 "En 2.6, tanto las cadenas de 8 bits como las Unicode tienen un método ``."
 "format()`` que trata la cadena como una plantilla y toma los argumentos para "
-"formatear. La plantilla de formato utiliza corchetes (``{``, ``}``) como "
+"formatear. La plantilla de formato utiliza llaves (``{``, ``}``) como "
 "caracteres especiales:"
 
 #: ../Doc/whatsnew/2.6.rst:737
@@ -4001,7 +4001,7 @@ msgid ""
 msgstr ""
 "El método :meth:`TarFile.add` ahora acepta un argumento ``exclude`` que es "
 "una función que se puede usar para excluir ciertos nombres de archivo de un "
-"archivo. La función debe tomar un nombre de archivo y devolver verdadero si "
+"archivo. La función debe tomar un nombre de archivo y retornar verdadero si "
 "el archivo debe excluirse o falso si debe archivarse. La función se aplica "
 "tanto al nombre pasado inicialmente a :meth:`add` como a los nombres de los "
 "archivos en los directorios agregados recursivamente."
