--- a/whatsnew/3.4.po
+++ b/whatsnew/3.4.po
@@ -3229,10 +3229,10 @@ msgid ""
 "of which will run even if one or more of them fail.  For example::"
 msgstr ""
 "La clase :class:`~unittest.TestCase` tiene un nuevo método, :meth:`~unittest."
-"TestCase.subTest`, que produce un administrador de contexto cuyo bloque :"
-"keyword:`with` se convierte en una \"subprueba\". Este administrador de "
+"TestCase.subTest`, que produce un gestor de contexto cuyo bloque :"
+"keyword:`with` se convierte en una \"subprueba\". Este gestor de "
 "contexto permite que un método de prueba genere subpruebas dinámicamente, "
-"por ejemplo, llamando al administrador de contexto ``subTest`` dentro de un "
+"por ejemplo, llamando al gestor de contexto ``subTest`` dentro de un "
 "bucle. Por lo tanto, un solo método de prueba puede producir un número "
 "indefinido de pruebas identificadas y contadas por separado, todas las "
 "cuales se ejecutarán incluso si una o más de ellas fallan. Por ejemplo::"
