--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -850,8 +850,8 @@ msgstr ""
 "Cuando ejecuta Python, la ruta de búsqueda del módulo ``sys.path`` "
 "generalmente incluye un directorio cuya ruta termina en ``\"site-"
 "packages\"``. Este directorio está destinado a contener paquetes instalados "
-"localmente disponibles para todos los usuarios que utilizan una máquina o "
-"un sitio de instalación en particular."
+"localmente disponibles para todos los usuarios que utilizan una máquina o un "
+"sitio de instalación en particular."
 
 #: ../Doc/whatsnew/2.6.rst:529
 msgid ""
