Traducido entradas fuzzy whatsnew (#2192)
Estos archivos tenían entradas `fuzzy` pero no habían issues
relacionadas.

Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-09-27 14:39-0300\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/2.6.rst:5
@@ -34,13 +34,12 @@ msgid "A.M. Kuchling (amk at amk.ca)"
 msgstr "A.M. Kuchling (amk arroba amk.ca)"
 
 #: ../Doc/whatsnew/2.6.rst:52
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 2.6, released on October 1, "
 "2008.  The release schedule is described in :pep:`361`."
 msgstr ""
-"Este articulo explica las nuevas características en Python 2.6, publicado el "
-"1 de Octubre de 2008. El calendario de publicación se describe en :pep:`361`."
+"Este artículo explica las nuevas funciones de Python 2.6, publicadas el 1 de "
+"octubre de 2008. El programa de publicación se describe en :pep:`361`."
 
 #: ../Doc/whatsnew/2.6.rst:55
 msgid ""
@@ -230,7 +229,6 @@ msgstr ""
 "personalizar el ciclo de vida de los problemas."
 
 #: ../Doc/whatsnew/2.6.rst:152
-#, fuzzy
 msgid ""
 "The infrastructure committee of the Python Software Foundation therefore "
 "posted a call for issue trackers, asking volunteers to set up different "
@@ -243,17 +241,17 @@ msgid ""
 "software projects; Roundup is an open-source project that requires "
 "volunteers to administer it and a server to host it."
 msgstr ""
-"Por lo tanto, el comité de infraestructura de la *Python Software "
-"Foundation* publicó una convocatoria sobre el seguimiento de incidentes, "
-"pidiendo a los voluntarios que configuren diferentes productos e importen "
-"algunos de los errores y parches de SourceForge. Se examinaron cuatro "
-"seguidores diferentes: `Jira <https://www.atlassian.com/software/jira/>` __, "
-"`Launchpad <https://launchpad.net/>` __, `Roundup <http://roundup ."
-"sourceforge.net/>`__ y `Trac <https://trac.edgewall.org/>`__. El comité "
-"finalmente se decidió por Jira y Roundup como los dos candidatos. Jira es un "
-"producto comercial que ofrece instancias alojadas sin costo para proyectos "
-"de software libre; Roundup es un proyecto de código abierto que requiere "
-"voluntarios para administrarlo y un servidor para alojarlo."
+"Por lo tanto, el comité de infraestructura de la Python Software Foundation "
+"publicó una convocatoria de rastreadores de problemas, solicitando "
+"voluntarios para configurar diferentes productos e importar algunos de los "
+"errores y parches de SourceForge. Se examinaron cuatro rastreadores "
+"diferentes: `Jira <https://www.atlassian.com/software/jira/>`__, `Launchpad "
+"<https://launchpad.net/>`__, `Roundup <https://roundup.sourceforge.io/>`__ y "
+"`Trac <https://trac.edgewall.org/>`__. El comité finalmente se decidió por "
+"Jira y Roundup como los dos candidatos. Jira es un producto comercial que "
+"ofrece instancias alojadas sin costo para proyectos de software libre; "
+"Roundup es un proyecto de código abierto que requiere voluntarios para "
+"administrarlo y un servidor para alojarlo."
 
 #: ../Doc/whatsnew/2.6.rst:166
 msgid ""
@@ -273,7 +271,6 @@ msgstr ""
 "error/parche para cada cambio."
 
 #: ../Doc/whatsnew/2.6.rst:174
-#, fuzzy
 msgid ""
 "Hosting of the Python bug tracker is kindly provided by `Upfront Systems "
 "<http://www.upfrontsoftware.co.za>`__ of Stellenbosch, South Africa.  Martin "
@@ -282,11 +279,11 @@ msgid ""
 "python.org/view/tracker/importer/`` and may be useful to other projects "
 "wishing to move from SourceForge to Roundup."
 msgstr ""
-"`Upfront Systems <http://www.upfrontsoftware.co.za>` __ de Stellenbosch, "
-"Sudáfrica, proporciona amablemente el alojamiento del seguidor de errores de "
-"Python. Martin von Löwis se esforzó mucho en importar errores y parches "
-"existentes desde SourceForge. Sus scripts para esta operación de importación "
-"se encuentran en http://svn.python.org/view/tracker/importer/ y pueden ser "
+"`Upfront Systems <http://www.upfrontsoftware.co.za>`__ de Stellenbosch, "
+"Sudáfrica, proporciona amablemente el alojamiento del rastreador de errores "
+"de Python. Martin von Löwis se esforzó mucho en importar errores y parches "
+"existentes de SourceForge; sus scripts para esta operación de importación "
+"están en ``https://svn.python.org/view/tracker/importer/`` y pueden ser "
 "útiles para otros proyectos que deseen pasar de SourceForge a Roundup."
 
 #: ../Doc/whatsnew/2.6.rst:185
@@ -298,27 +295,24 @@ msgid "The Python bug tracker."
 msgstr "El seguidor de errores de Python."
 
 #: ../Doc/whatsnew/2.6.rst:188
-#, fuzzy
 msgid "https://bugs.jython.org:"
-msgstr "http://bugs.jython.org:"
+msgstr "https://bugs.jython.org:"
 
 #: ../Doc/whatsnew/2.6.rst:188
 msgid "The Jython bug tracker."
 msgstr "El seguidor de errores de Jython."
 
 #: ../Doc/whatsnew/2.6.rst:191
-#, fuzzy
 msgid "https://roundup.sourceforge.io/"
-msgstr "http://roundup.sourceforge.net/"
+msgstr "https://roundup.sourceforge.io/"
 
 #: ../Doc/whatsnew/2.6.rst:191
 msgid "Roundup downloads and documentation."
 msgstr "Descargas y documentación de Roundup."
 
 #: ../Doc/whatsnew/2.6.rst:193
-#, fuzzy
 msgid "https://svn.python.org/view/tracker/importer/"
-msgstr "http://svn.python.org/view/tracker/importer/"
+msgstr "https://svn.python.org/view/tracker/importer/"
 
 #: ../Doc/whatsnew/2.6.rst:194
 msgid "Martin von Löwis's conversion scripts."
@@ -367,15 +361,15 @@ msgstr ""
 "tiempo necesario para terminar el trabajo."
 
 #: ../Doc/whatsnew/2.6.rst:217
-#, fuzzy
 msgid ""
 "During the 2.6 development cycle, Georg Brandl put a lot of effort into "
 "building a new toolchain for processing the documentation.  The resulting "
 "package is called Sphinx, and is available from https://www.sphinx-doc.org/."
 msgstr ""
-"Durante el ciclo de desarrollo 2.6, Georg Brandl se esforzó mucho en crear "
-"una nueva cadena de herramientas para procesar la documentación. El paquete "
-"resultante se llama Sphinx y está disponible en http://sphinx-doc.org/."
+"Durante el ciclo de desarrollo 2.6, Georg Brandl se esforzó mucho en "
+"construir una nueva cadena de herramientas para procesar la documentación. "
+"El paquete resultante se llama Sphinx y está disponible en https://www."
+"sphinx-doc.org/."
 
 #: ../Doc/whatsnew/2.6.rst:222
 msgid ""
@@ -411,18 +405,16 @@ msgid "Describes how to write for Python's documentation."
 msgstr "Describe cómo escribir para la documentación de Python."
 
 #: ../Doc/whatsnew/2.6.rst:239
-#, fuzzy
 msgid "`Sphinx <https://www.sphinx-doc.org/>`__"
-msgstr "`Sphinx <http://sphinx-doc.org/>`__"
+msgstr "`Sphinx <https://www.sphinx-doc.org/>`__"
 
 #: ../Doc/whatsnew/2.6.rst:239
 msgid "Documentation and code for the Sphinx toolchain."
 msgstr "Documentación y código para la cadena de herramientas Sphinx."
 
 #: ../Doc/whatsnew/2.6.rst:241
-#, fuzzy
 msgid "`Docutils <https://docutils.sourceforge.io>`__"
-msgstr "`Docutils <http://docutils.sourceforge.net>`__"
+msgstr "`Docutils <https://docutils.sourceforge.io>`__"
 
 #: ../Doc/whatsnew/2.6.rst:242
 msgid "The underlying reStructuredText parser and toolset."
@@ -849,14 +841,13 @@ msgid "PEP 370: Per-user ``site-packages`` Directory"
 msgstr "PEP 370: Directorio de ``site-packages`` por usuario"
 
 #: ../Doc/whatsnew/2.6.rst:524
-#, fuzzy
 msgid ""
 "When you run Python, the module search path ``sys.path`` usually includes a "
 "directory whose path ends in ``\"site-packages\"``.  This directory is "
 "intended to hold locally installed packages available to all users using a "
 "machine or a particular site installation."
 msgstr ""
-"Cuando ejecutas Python, la ruta de búsqueda del módulo ``sys.path`` "
+"Cuando ejecuta Python, la ruta de búsqueda del módulo ``sys.path`` "
 "generalmente incluye un directorio cuya ruta termina en ``\"site-"
 "packages\"``. Este directorio está destinado a contener paquetes instalados "
 "localmente disponibles para todos los usuarios que utilizan una máquina o un "
@@ -1055,28 +1046,26 @@ msgid "PEP 3101: Advanced String Formatting"
 msgstr "PEP 3101: Formateo avanzado de cadena de caracteres"
 
 #: ../Doc/whatsnew/2.6.rst:720
-#, fuzzy
 msgid ""
 "In Python 3.0, the ``%`` operator is supplemented by a more powerful string "
 "formatting method, :meth:`format`.  Support for the :meth:`str.format` "
 "method has been backported to Python 2.6."
 msgstr ""
-"En Python 3.0, el operador `%` se complementa con un método de formato de "
-"cadena de caracteres más potente, :meth:`format`. La compatibilidad con el "
-"método :meth:`str.format` se ha actualizado a Python 2.6."
+"En Python 3.0, el operador ``%`` se complementa con un método de formato de "
+"cadena más potente, :meth:`format`. La compatibilidad con el método :meth:"
+"`str.format` se ha retroalimentado a Python 2.6."
 
 #: ../Doc/whatsnew/2.6.rst:724
-#, fuzzy
 msgid ""
 "In 2.6, both 8-bit and Unicode strings have a ``.format()`` method that "
 "treats the string as a template and takes the arguments to be formatted. The "
 "formatting template uses curly brackets (``{``, ``}``) as special "
 "characters::"
 msgstr ""
-"En 2.6, las cadenas de caracteres de 8 bits y Unicode tienen un método `."
-"format()` que trata la cadena como una plantilla y toma los argumentos a "
-"formatear. La plantilla de formato utiliza llaves (`{`, `}`) como caracteres "
-"especiales::"
+"En 2.6, tanto las cadenas de 8 bits como las Unicode tienen un método ``."
+"format()`` que trata la cadena como una plantilla y toma los argumentos para "
+"formatear. La plantilla de formato utiliza llaves (``{``, ``}``) como "
+"caracteres especiales:"
 
 #: ../Doc/whatsnew/2.6.rst:737
 msgid "Curly brackets can be escaped by doubling them::"
@@ -2194,13 +2183,12 @@ msgstr ""
 "html_node/Numerical-Tower.html#Numerical-Tower>`__, del manual de Guile."
 
 #: ../Doc/whatsnew/2.6.rst:1436
-#, fuzzy
 msgid ""
 "`Scheme's number datatypes <https://schemers.org/Documents/Standards/R5RS/"
 "HTML/r5rs-Z-H-9.html#%_sec_6.2>`__ from the R5RS Scheme specification."
 msgstr ""
-"`Scheme's number datatypes <http://schemers.org/Documents/Standards/R5RS/"
-"HTML/r5rs-Z-H-9.html#%_sec_6.2>`__ de la especificación R5RS Scheme."
+"`Scheme's number datatypes <https://schemers.org/Documents/Standards/R5RS/"
+"HTML/r5rs-Z-H-9.html#%_sec_6.2>`__ de la especificación del esquema R5RS."
 
 #: ../Doc/whatsnew/2.6.rst:1440
 msgid "The :mod:`fractions` Module"
@@ -3009,17 +2997,16 @@ msgstr ""
 "de Skip Montanaro; :issue:`1158`.)"
 
 #: ../Doc/whatsnew/2.6.rst:1928
-#, fuzzy
 msgid ""
 "The :mod:`decimal` module was updated to version 1.66 of `the General "
 "Decimal Specification <https://speleotrove.com/decimal/decarith.html>`__.  "
 "New features include some methods for some basic mathematical functions such "
 "as :meth:`exp` and :meth:`log10`::"
 msgstr ""
-"El módulo :mod:`decimal` se ha actualizado a la versión 1.66 de `la "
-"Especificación General Decimal <http://speleotrove.com/decimal/decarith."
-"html>`__.  Las nuevas características incluyen algunos métodos para algunas "
-"funciones matemáticas básicas como :meth:`exp` y :meth:`log10`::"
+"El módulo :mod:`decimal` se actualizó a la versión 1.66 de `the General "
+"Decimal Specification <https://speleotrove.com/decimal/decarith.html>`__. "
+"Las nuevas características incluyen algunos métodos para algunas funciones "
+"matemáticas básicas como :meth:`exp` y :meth:`log10`:"
 
 #: ../Doc/whatsnew/2.6.rst:1940
 msgid ""
@@ -3875,13 +3862,12 @@ msgstr ""
 "de la versión 2.3.2 en Python 2.5 a la versión 2.4.1."
 
 #: ../Doc/whatsnew/2.6.rst:2392
-#, fuzzy
 msgid ""
 "The :mod:`struct` module now supports the C99 :c:expr:`_Bool` type, using "
 "the format character ``'?'``. (Contributed by David Remahl.)"
 msgstr ""
-"El módulo :mod:`struct` soporta ahora el tipo C99 :c:type:`_Bool`, "
-"utilizando el carácter de formato ``'?'``. (Contribución de David Remahl.)"
+"El módulo :mod:`struct` ahora admite el tipo C99 :c:expr:`_Bool`, utilizando "
+"el carácter de formato ``'?'``. (Aportado por David Remahl.)"
 
 #: ../Doc/whatsnew/2.6.rst:2396
 msgid ""
@@ -4005,7 +3991,6 @@ msgstr ""
 "archivo Unicode, por defecto con codificación UTF-8)"
 
 #: ../Doc/whatsnew/2.6.rst:2457
-#, fuzzy
 msgid ""
 "The :meth:`TarFile.add` method now accepts an ``exclude`` argument that's a "
 "function that can be used to exclude certain filenames from an archive. The "
@@ -4015,11 +4000,11 @@ msgid ""
 "added directories."
 msgstr ""
 "El método :meth:`TarFile.add` ahora acepta un argumento ``exclude`` que es "
-"una función que se puede utilizar para excluir ciertos nombres de archivo de "
-"un archivo. La función debe tomar un nombre de archivo y devolver true si el "
-"archivo debe ser excluido o false si debe ser archivado. La función se "
-"aplica tanto al nombre inicialmente pasado a :meth:`add` como a los nombres "
-"de los archivos en los directorios añadidos recursivamente."
+"una función que se puede usar para excluir ciertos nombres de archivo de un "
+"archivo. La función debe tomar un nombre de archivo y retornar verdadero si "
+"el archivo debe excluirse o falso si debe archivarse. La función se aplica "
+"tanto al nombre pasado inicialmente a :meth:`add` como a los nombres de los "
+"archivos en los directorios agregados recursivamente."
 
 #: ../Doc/whatsnew/2.6.rst:2465
 msgid "(All changes contributed by Lars Gustäbel)."
@@ -4110,7 +4095,6 @@ msgid "(Contributed by Brett Cannon.)"
 msgstr "(Contribución de Brett Cannon.)"
 
 #: ../Doc/whatsnew/2.6.rst:2515
-#, fuzzy
 msgid ""
 "The :mod:`textwrap` module can now preserve existing whitespace at the "
 "beginnings and ends of the newly created lines by specifying "
@@ -4118,7 +4102,7 @@ msgid ""
 msgstr ""
 "El módulo :mod:`textwrap` ahora puede conservar los espacios en blanco "
 "existentes al principio y al final de las líneas recién creadas "
-"especificando ``drop_whitespace=False`` como argumento::"
+"especificando ``drop_whitespace=False`` como argumento:"
 
 #: ../Doc/whatsnew/2.6.rst:2534
 msgid "(Contributed by Dwayne Bailey; :issue:`1581073`.)"
