--- a/whatsnew/2.2.po
+++ b/whatsnew/2.2.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-08-07 10:12+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/2.2.rst:3
@@ -1707,18 +1707,17 @@ msgstr ""
 "(Contribución de Jun-ichiro \"itojun\" Hagino)"
 
 #: ../Doc/whatsnew/2.2.rst:985
-#, fuzzy
 msgid ""
 "Two new format characters were added to the :mod:`struct` module for 64-bit "
 "integers on platforms that support the C :c:expr:`long long` type.  ``q`` is "
 "for a signed 64-bit integer, and ``Q`` is for an unsigned one.  The value is "
 "returned in Python's long integer type.  (Contributed by Tim Peters.)"
 msgstr ""
-"Se han añadido dos nuevos caracteres de formato al módulo :mod:`struct` para "
-"enteros de 64 bits en plataformas que soportan el tipo C :c:type:`long "
-"long`.  ``q`` es para un entero de 64 bits con signo, y ``Q`` es para uno "
-"sin signo.  El valor se retorna en el tipo entero largo de Python.  "
-"(Contribuido por Tim Peters.)"
+"Se agregaron dos nuevos caracteres de formato al módulo :mod:`struct` para "
+"enteros de 64 bits en plataformas que admiten el tipo C :c:expr:`long long`. "
+"``q`` es para un entero de 64 bits con signo y ``Q`` es para uno sin firmar. "
+"El valor se retorna en el tipo de entero largo de Python. (Aportado por Tim "
+"Peters.)"
 
 #: ../Doc/whatsnew/2.2.rst:990
 msgid ""
@@ -1996,7 +1995,6 @@ msgstr ""
 "el soporte de MBCS en Windows descrito en la siguiente sección)"
 
 #: ../Doc/whatsnew/2.2.rst:1102
-#, fuzzy
 msgid ""
 "A different argument parsing function, :c:func:`PyArg_UnpackTuple`, has been "
 "added that's simpler and presumably faster.  Instead of specifying a format "
@@ -2004,12 +2002,12 @@ msgid ""
 "expected, and a set of pointers to :c:expr:`PyObject*` variables that will "
 "be filled in with argument values."
 msgstr ""
-"Se ha añadido una función de análisis de argumentos diferente, :c:func:"
-"`PyArg_UnpackTuple`, que es más sencilla y presumiblemente más rápida.  En "
+"Se ha agregado una función de análisis de argumentos diferente, :c:func:"
+"`PyArg_UnpackTuple`, que es más simple y presumiblemente más rápida. En "
 "lugar de especificar una cadena de formato, la persona que llama simplemente "
-"da el número mínimo y máximo de argumentos esperados, y un conjunto de "
-"punteros a variables :c:type:`PyObject\\*` que se rellenarán con los valores "
-"de los argumentos."
+"proporciona el número mínimo y máximo de argumentos esperados y un conjunto "
+"de punteros a las variables :c:expr:`PyObject*` que se completarán con los "
+"valores de los argumentos."
 
 #: ../Doc/whatsnew/2.2.rst:1108
 msgid ""
