--- a/whatsnew/3.0.po
+++ b/whatsnew/3.0.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2020-11-29 11:59-0300\n"
 "Last-Translator: \n"
-"Language: es_ES\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/3.0.rst:3
@@ -34,7 +34,6 @@ msgid "Guido van Rossum"
 msgstr "Guido van Rossum"
 
 #: ../Doc/whatsnew/3.0.rst:54
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 3.0, compared to 2.6. "
 "Python 3.0, also known as \"Python 3000\" or \"Py3K\", is the first ever "
@@ -45,15 +44,15 @@ msgid ""
 "all that much -- by and large, we're mostly fixing well-known annoyances and "
 "warts, and removing a lot of old cruft."
 msgstr ""
-"En este artículo se explican las nuevas características de Python 3.0, en "
-"comparación con las de 2.6. Python 3.0, también conocido como \"Python "
-"3000\" o \"Py3K\". Es la primera versión de Python *intencionalmente "
-"incompatible hacia atrás*. Hay más cambios que en una versión típica y más "
-"que son importantes para todos los usuarios de Python. Sin embargo, después "
-"de digerir los cambios, se comprobará que Python no ha cambiado tanto "
-"realmente -- en general, estamos arreglando en su mayoría molestias y "
-"defectos bien conocidos, y la eliminación de una gran cantidad de sobras "
-"antiguas."
+"Este artículo explica las nuevas características de Python 3.0, en "
+"comparación con 2.6. Python 3.0, también conocido como \"Python 3000\" o "
+"\"Py3K\", es la primera versión *intentionally backwards incompatible* de "
+"Python. Python 3.0 se lanzó el 3 de diciembre de 2008. Hay más cambios que "
+"en una versión típica y más que son importantes para todos los usuarios de "
+"Python. Sin embargo, después de digerir los cambios, descubrirá que Python "
+"realmente no ha cambiado tanto; en general, estamos solucionando "
+"principalmente molestias y defectos conocidos, y eliminando una gran "
+"cantidad de viejas cosas."
 
 #: ../Doc/whatsnew/3.0.rst:63
 msgid ""
@@ -1316,7 +1315,6 @@ msgstr ""
 "generate_tokens."
 
 #: ../Doc/whatsnew/3.0.rst:661
-#, fuzzy
 msgid ""
 ":data:`string.letters` and its friends (:data:`string.lowercase` and :data:"
 "`string.uppercase`) are gone.  Use :data:`string.ascii_letters` etc. "
@@ -1324,12 +1322,12 @@ msgid ""
 "friends had locale-specific behavior, which is a bad idea for such "
 "attractively named global \"constants\".)"
 msgstr ""
-":data:`string.letters` y sus amigos (:data:`string.lowercase` and :data:"
-"`string.uppercase`) han sido eliminadas. Utilizar :data:`string."
-"ascii_letters` etc. en su lugar. (La razón para la eliminación es que :data:"
-"`string.letters` y sus amigos tenían un comportamiento específico de lugar, "
-"que es una mala idea para tales \"constantes\" nombradas atractivamente "
-"globales.)"
+":data:`string.letters` y sus amigos (:data:`string.lowercase` y :data:"
+"`string.uppercase`) se han ido. Utilice :data:`string.ascii_letters`, etc. "
+"en su lugar. (El motivo de la eliminación es que :data:`string.letters` y "
+"sus amigos tenían un comportamiento específico de la configuración regional, "
+"lo cual es una mala idea para \"constantes\" globales con nombres tan "
+"atractivos)."
 
 #: ../Doc/whatsnew/3.0.rst:668
 msgid ""
